# wikisplit-pp

./: .envrc  .gitignore  LICENSE.txt  README.md  pyproject.toml
src/: create-datasets.sh  download.sh  experiment.py  models.py  nli.py  train.py  utils.py
src/datasets/: common.py  hsplit.py  min_wiki_split.py  nli_flitering.py  run_bisect.py  small_but_mighty.py  upsampling.py  wiki_split.py
src/evaluations/: __init__.py  bleu.py  bleurt_score.py  bscore.py  evaluator.py  fkgl.py  nli.py  sari.py  statistics.py  syllable_counter.py
src/misc/: get_baselines.py  get_main_results.py  get_ours.py  nli_test.py  sent_num_dist.py  upload_hf.py
src/system/: echo.py  gpt3.py  previous.py  reference.py
